Fix main wrap grid columns

--- a/web/web/css/layout.css
+++ b/web/web/css/layout.css
@@ -26,7 +26,7 @@ body {
 .main-wrap {
   display: grid;
   grid-template-areas: ". . main . .";
-  grid-template-columns: 1vw 1fr minmax(auto,calc(98vw - 2fr)) 1fr 1vw;
+  grid-template-columns: 1vw 1fr auto 1fr 1vw;
   margin-top: 0;
   min-height: calc(100vh - (var(--footer-height) + var(--header-height)));
 }
